# primeyield

./: .env.example  .gitignore  LICENSE  Makefile  README.md  foundry.toml  pyproject.toml
agent/: __init__.py  approval_store.py  config.py  db.py  decision_logger.py  graph.py  llm.py  risk.py  state.py
agent/adapters/: __init__.py  agni.py  mantle_lsp.py  merchant_moe.py  ondo.py  ondo_abi.py  schemas.py
api/: __init__.py  main.py
api/routes/: dashboard.py  portfolio.py  telegram.py
contracts/src/: DecisionLog.sol  PrimeYieldVault.sol
contracts/src/mocks/: MockERC20.sol
contracts/test/: PrimeYieldVault.t.sol
demo/: DORAHACKS.md  agent-card.json  script.md  x-thread.md
docs/: AUDIT.md  DECISIONS.md  JUDGES.md  README.md
scripts/: deploy_vault.py  judge_replay.py  register_agent.py  run_cycle.py
state/: decisions.jsonl
tests/: test_adapters.py  test_graph.py  test_risk.py
