[project]
name = "primeyield"
version = "0.1.0"
description = "LangGraph-orchestrated RWA yield-rotation agent on Mantle with on-chain decision provenance."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PrimeYield" }]

dependencies = [
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langsmith>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "web3>=7",
    "python-telegram-bot==21.*",
    "pydantic>=2",
    # Pinata is accessed via its REST API using `requests` (the `pinata-python-sdk`
    # package referenced in the brief is not a stable PyPI distribution).
    "requests>=2.31",
    "python-dotenv>=1.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
